# MIRTorch

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  demo.ipynb  linop.py  proper_fista.ipynb  pyproject.toml  requirements.txt  setup.py  test_first_MNIST.ipynb  test_fista.ipynb  test_fista_mri.ipynb  test_linops.ipynb
.github/workflows/: python-ci.yml  python-publish.yml  python-pypi.yml  python-release.yml
LinearMap/: FFT.py  FiniteDiff.py  LinearMap.py  Prox.py
alg/: cg.py  eig.py  fista.py
docs/: API.rst  Algorithms.rst  DL.rst  HISTORY.md  LinearMap.rst  Prox.rst  README.md  conf.py  index.rst  requirements.txt
examples/: conv_tests.ipynb  demo_3d.ipynb  demo_cs.ipynb  demo_cs_nonuniform.ipynb  demo_dl.ipynb  demo_mlem.ipynb  demo_mnist.ipynb  demo_mri.ipynb  test_conv.ipynb  test_linops.ipynb
examples/.ipynb_checkpoints/: demo_cs-checkpoint.ipynb  demo_mri-checkpoint.ipynb  test_linops-checkpoint.ipynb
learning/: train.py
learning/data/: NYUMulti_dataset.py  __init__.py  image_folder.py
learning/model/: MODL_model.py
learning/options/: base_options.py  train_options.py
learning/util/util/: hfen.py  metrics.py  rbf.py  simulation.py  subsample.py
linear/: FFT.py  FiniteDiff.py  __init__.py  basics.py  linearmaps.py  mri.py  wavelets.py
mirtorch/: __init__.py
mirtorch/alg/: __init__.py  cg.py  eig.py  fbpd.py  fista.py  pogm.py  spectral.py
mirtorch/dic/: SOUPDIL.py  __init__.py  soup.py  util.py
mirtorch/graph/: __init__.py  viewtensor.py
mirtorch/learning/: __init__.py  test.py  train.py
mirtorch/learning/model/: MODL_model.py  base_model.py  networks.py
mirtorch/learning/model/nets/: didn.py
mirtorch/learning/options/: base_options.py  test_options.py
mirtorch/linear/: __init__.py  basics.py  bdd2d.py  ct.py  linearmaps.py  mri.py  spect.py  util.py  wavelets.py
mirtorch/nn/: __init__.py
mirtorch/nn/model/: MODL_model.py  __init__.py
mirtorch/nn/util/: get_data.py  metrics.py  util.py  visualizer.py
mirtorch/prox/: __init__.py  prox.py
mirtorch/util/: __init__.py  metrics.py  sig.py  util.py  visualizer.py
mirtorch/vendors/pytorch_wavelets/: __init__.py  _version.py  utils.py
mirtorch/vendors/pytorch_wavelets/dtcwt/: coeffs.py  lowlevel.py  lowlevel2.py  transform2d.py  transform_funcs.py
mirtorch/vendors/pytorch_wavelets/dwt/: lowlevel.py  swt_inverse.py  transform1d.py  transform2d.py
mirtorch/vendors/pytorch_wavelets/scatternet/: __init__.py  layers.py  lowlevel.py
paper/: paper.bib  paper.md
prox/: Prox.py
tests/: basics_test.py  basics_tests.py  linops_tests.py  mri_tests.py  prox_tests.py  spect_tests.py  test_algs.ipynb  util_tests.py  utils.py
